fix spacing

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -258,7 +258,7 @@ ul.row {
 aside:after,
 abbr[title]:after,
 a:not(.no_icon):after,
-  a:not(.no_icon):before {
+a:not(.no_icon):before {
   font-family: "FontAwesome";
   font-size: 0.9em;
   display: inline-block;
@@ -270,6 +270,10 @@ aside:after,
 abbr[title]:after,
 a:not(.no_icon):after {
   padding-left: 0.2em;
+}
+
+a:not(.no_icon):before {
+  padding-right: 0.2em;
 }
 
 /* paperclip */
@@ -467,7 +471,7 @@ body {
     padding: 0 0.5em;
     background-color: var(--accent-color);
   }
-  
+
   aside:hover {
     transform: translateX(0);
     transition: var(--animate-all);
